--- a/backend/package.json
+++ b/backend/package.json
@@ -4,16 +4,17 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "prod":"nodemon server.js"
+    "prod": "nodemon server.js",
+    "start": "node server.js"
   },
   "author": "",
   "license": "ISC",
   "keywords": [],
-  "description": "",
   "dependencies": {
     "cors": "^2.8.5",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "path": "^0.12.7"
-  }
+  },
+  "description": ""
 }
